crates/swc-react-native-worklets/tests/snapshots/transform_test__class_method_directives_are_workletized.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
const _worklet_1987277393922_init_data = {
    code: "(function method_SampleTs1(value) {\n    return value;\n})",
    location: "Sample.ts"
};
const _worklet_16946800770950_init_data = {
    code: "(function run_SampleTs2() {\n    return 1;\n})",
    location: "Sample.ts"
};
class Example {
    constructor(value){
        'worklet';
        this.value = value;
    }
    method = (function method_SampleTs1Factory([_worklet_1987277393922_init_data]) {
        const _e = [
            new global.Error(),
            1,
            -27
        ];
        const method = function(value) {
            "use no memo";
            return value;
        };
        method.__workletHash = 1987277393922;
        method.__pluginVersion = "test";
        method.__initData = _worklet_1987277393922_init_data;
        method.__stackDetails = _e;
        return method;
    })([
        _worklet_1987277393922_init_data
    ]);
    get current() {
        'worklet';
        return this.value;
    }
    set current(value) {
        'worklet';
        this.value = value;
    }
    static run = (function run_SampleTs2Factory([_worklet_16946800770950_init_data]) {
        const _e = [
            new global.Error(),
            1,
            -27
        ];
        const run = function() {
            "use no memo";
            return 1;
        };
        run.__workletHash = 16946800770950;
        run.__pluginVersion = "test";
        run.__initData = _worklet_16946800770950_init_data;
        run.__stackDetails = _e;
        return run;
    })([
        _worklet_16946800770950_init_data
    ]);
}
