crates/swc-react-native-worklets/tests/snapshots/transform_test__class_without_worklet_marker_passes_through.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
class Plain {
    draw() {
        this.x = 1;
    }
}
