crates/swc-react-native-worklets/tests/snapshots/transform_test__no_worklet_directive_passes_through.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
function regular() {
    return 42;
}
export default regular;
