crates/swc-react-native-worklets/tests/snapshots/transform_test__strict_global_captures_unlisted_globals.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
const _worklet_7558221929009_init_data = {
    code: "(function fn_SampleTs1() {\n    return Math.random();\n})",
    location: "Sample.ts"
};
const fn = (function fn_SampleTs1Factory([_worklet_7558221929009_init_data]) {
    const _e = [
        new global.Error(),
        1,
        -27
    ];
    const fn = function() {
        "use no memo";
        return Math.random();
    };
    fn.__workletHash = 7558221929009;
    fn.__pluginVersion = "test";
    fn.__initData = _worklet_7558221929009_init_data;
    fn.__stackDetails = _e;
    return fn;
})([
    _worklet_7558221929009_init_data
]);
