crates/swc-react-native-worklets/tests/snapshots/transform_test__worklet_arrow_assigned_to_variable.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
const _worklet_17307596143664_init_data = {
    code: "(function SampleTs1(x) {\n    return x * x;\n})",
    location: "Sample.ts"
};
const square = (function SampleTs1Factory([_worklet_17307596143664_init_data]) {
    const _e = [
        new global.Error(),
        1,
        -27
    ];
    const SampleTs1 = function(x) {
        "use no memo";
        return x * x;
    };
    SampleTs1.__workletHash = 17307596143664;
    SampleTs1.__pluginVersion = "test";
    SampleTs1.__initData = _worklet_17307596143664_init_data;
    SampleTs1.__stackDetails = _e;
    return SampleTs1;
})([
    _worklet_17307596143664_init_data
]);
