crates/swc-react-native-worklets/tests/snapshots/transform_test__worklet_class_marker_on_method_with_reserved_keyword_name.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
const _worklet_8197995048344_init_data = {
    code: '(function Ball__classFactory_SampleTs1() {\n    const Ball__classFactory_SampleTs1 = this._recur;\n    function _class_call_check(instance, Constructor) {\n        if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");\n    }\n    function _defineProperties(target, props) {\n        for(var i = 0; i < props.length; i++){\n            var descriptor = props[i];\n            descriptor.enumerable = descriptor.enumerable || false;\n            descriptor.configurable = true;\n            if ("value" in descriptor) descriptor.writable = true;\n            Object.defineProperty(target, descriptor.key, descriptor);\n        }\n    }\n    function _create_class(Constructor, protoProps, staticProps) {\n        if (protoProps) _defineProperties(Constructor.prototype, protoProps);\n        if (staticProps) _defineProperties(Constructor, staticProps);\n        return Constructor;\n    }\n    let Ball = /*#__PURE__*/ function() {\n        function Ball() {\n            _class_call_check(this, Ball);\n        }\n        _create_class(Ball, [\n            {\n                key: "throw",\n                value: function _throw(vx, vy) {\n                    this.vx += vx;\n                }\n            }\n        ]);\n        return Ball;\n    }();\n    Ball.Ball__classFactory = Ball__classFactory_SampleTs1;\n    return Ball;\n})',
    location: "Sample.ts"
};
const Ball__classFactory = (function Ball__classFactory_SampleTs1Factory([_worklet_8197995048344_init_data]) {
    const _e = [
        new global.Error(),
        1,
        -27
    ];
    const Ball__classFactory = function() {
        "use no memo";
        function _class_call_check(instance, Constructor) {
            if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
        }
        function _defineProperties(target, props) {
            for(var i = 0; i < props.length; i++){
                var descriptor = props[i];
                descriptor.enumerable = descriptor.enumerable || false;
                descriptor.configurable = true;
                if ("value" in descriptor) descriptor.writable = true;
                Object.defineProperty(target, descriptor.key, descriptor);
            }
        }
        function _create_class(Constructor, protoProps, staticProps) {
            if (protoProps) _defineProperties(Constructor.prototype, protoProps);
            if (staticProps) _defineProperties(Constructor, staticProps);
            return Constructor;
        }
        let Ball = /*#__PURE__*/ function() {
            "use strict";
            function Ball() {
                _class_call_check(this, Ball);
            }
            _create_class(Ball, [
                {
                    key: "throw",
                    value: function _throw(vx, vy) {
                        this.vx += vx;
                    }
                }
            ]);
            return Ball;
        }();
        Ball.Ball__classFactory = Ball__classFactory;
        return Ball;
    };
    Ball__classFactory.__workletHash = 8197995048344;
    Ball__classFactory.__pluginVersion = "test";
    Ball__classFactory.__initData = _worklet_8197995048344_init_data;
    Ball__classFactory.__stackDetails = _e;
    return Ball__classFactory;
})([
    _worklet_8197995048344_init_data
]);
const Ball = Ball__classFactory();
